Estilos CSS básicos terminados

--- a/index.html
+++ b/index.html
@@ -11,20 +11,24 @@
 <body>
     <header>
             <nav>
-                <ul>
-                    <li<a href="#"></a>Sobre mi</li>
-                    <li<a href="#"></a>Tecnologías</li>
-                    <li<a href="#"></a>Proyectos</li>
-                    <li<a href="#"></a>Contacto</li>
-
-
-
+                <div class="row">
+                <img ID="logo" src="/image/logo.png" alt="Logotipo">
+                <ul class="nav">
+                    <li><a href="#">Sobre mi</a></li>
+                    <li><a href="#">Tecnologías</a></li>
+                    <li><a href="#">Proyectos</a></li>
+                    <li><a href="#">Contacto</a></li>
                 </ul>
-
+                </div>
             </nav>
-
+            <div class="home-container">
+                <h1>E. M. ParamoS. Desarrollador Web</h1>
+                    <a href="" class="btn-contact">Contacto</a>
+                    <a href="" class="btn-more"> Ver más</a>
+            </div>
+            <p>Photo by <a href="https://unsplash.com/@pankajpatel?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Pankaj Patel</a> on <a href="https://unsplash.com/photos/vxgt_Zu0O00?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+            </p>
     </header>
-    <img src="image/pankaj-patel-vxgt_Zu0O00-unsplash.jpeg" alt="Portada" width="100%">
-    
+
 </body>
 </html>
