Estilos CSS básicos terminados

--- a/index.html
+++ b/index.html
@@ -22,13 +22,21 @@
                 </div>
             </nav>
             <div class="home-container">
-                <h1>E. M. ParamoS. Desarrollador Web</h1>
-                    <a href="" class="btn-contact">Contacto</a>
-                    <a href="" class="btn-more"> Ver más</a>
+                <h1>E. M. Paramo S. Desarrollador Web</h1>
+                    <a href="" class="btn btn-contact">Contacto</a>
+                    <a href="" class="btn btn-more"> Ver más</a>
             </div>
-            <p>Photo by <a href="https://unsplash.com/@pankajpatel?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Pankaj Patel</a> on <a href="https://unsplash.com/photos/vxgt_Zu0O00?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
-            </p>
     </header>
+    
+    <section class="section">
 
+
+    </section>
+
+
+    <footer>
+        <p>Photo by <a href="https://unsplash.com/@pankajpatel?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Pankaj Patel</a> on <a href="https://unsplash.com/photos/vxgt_Zu0O00?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+        </p>
+    </footer>
 </body>
 </html>
