--- a/index.html
+++ b/index.html
@@ -27,12 +27,36 @@
                     <a href="" class="btn btn-more"> Ver más</a>
             </div>
     </header>
-    
-    <section class="section">
 
-
+    <section class="section-description">
+        <div class="row">
+            <h2>Backend</h2>
+            <p class="text-content">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum fuga tempore dolores dolorem, repellat cumque iste quasi, suscipit accusamus, voluptatem sequi reiciendis! Nisi similique debitis, minus corporis officia sapiente id?
+                Nobis, est nisi veniam vitae nihil quo natus reiciendis optio dolorum minus beatae id voluptate eos autem accusantium officiis, voluptatibus nam amet ipsum neque dolor. Cumque aliquid aperiam beatae eveniet?
+                Asperiores saepe, praesentium velit placeat ipsum cupiditate eveniet minus! Earum quibusdam velit minima odit, excepturi mollitia cupiditate quis, saepe fugiat aperiam at adipisci libero facere quae eos, animi quam voluptates!
+            </p>
+        </div>
     </section>
+    <!-- Section Plans -->
+    <section class="section-plan">
+        <div class="row">
+            <h2>Tecnologías</h2>
+        </div>
+        <div class="row">
+            <div class="col span-1-of-3">
+                <div class="plan-content">
+                <div>
+                    <h3>Plan Básico</h3>
+                    <p class="plan-price">$400.00</p>
+                    
+                </div>
 
+                </div>
+            </div>
+
+        </div>
+    </section>
 
     <footer>
         <p>Photo by <a href="https://unsplash.com/@pankajpatel?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Pankaj Patel</a> on <a href="https://unsplash.com/photos/vxgt_Zu0O00?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
