Portafolio ya casi terminado

--- a/index.html
+++ b/index.html
@@ -9,37 +9,30 @@
     <link rel="shortcut icon" href="/image/iconos/logo.ico">
 </head>
 <body>
-    <div>
+    <div class="contenedor">
     <header>
         <img ID="logo" src="/image/logo.png" alt="Logotipo de E.Miguel Páramo S.">
             <nav>
-                <div class="row">
-                <ul class="nav">
-                    <li><a href="#section-description">Sobre mi</a></li>
-                    <li><a href="#section-tecno">Tecnologías</a></li>
-                    <li><a href="#section-proyectos">Proyectos</a></li>
-                    <li><a href="#">Contacto</a></li>
-                </ul>
-                </div>
+                    <div class="menunav">
+                        <ul>
+                            <li><a href="#section-description">Sobre mi</a></li>
+                            <li><a href="#section-tecno">Tecnologías</a></li>
+                            <li><a href="#section-proyectos">Proyectos</a></li>
+                            <li><a href="#">Contacto</a></li>
+                        </ul>
+                    </div>
             </nav>
-            <div class="home-container">
-                <h1>E. Miguel Páramo S. <br/>Desarrollador Web</h1>
-                    <a href="" class="btn btn-contact">Contacto</a>
-                    <a href="" class="btn btn-more"> Ver más</a>
+            <div class="col-12 col-s-12 menu">
+                <h1>E. Miguel Páramo S. <br/> <br/>Desarrollador Web</h1>
             </div>
             <!-- Crédito de la imagen -->
             <p>Photo by <a href="https://unsplash.com/@pankajpatel?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Pankaj Patel</a> on <a href="https://unsplash.com/photos/vxgt_Zu0O00?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
-    </header>
-    <footer>
-        <p>Photo by <a href="https://unsplash.com/@pankajpatel?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Pankaj Patel</a> on <a href="https://unsplash.com/photos/vxgt_Zu0O00?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
-        </p>
-
-    </footer>
+        </header>
     </div>
 
     <section Id="section-description">
         <div class="row">
-            <h2>Backend</h2>
+            <h2>Sobre mí</h2>
             <p class="text-content">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum fuga tempore dolores dolorem, repellat cumque iste quasi, suscipit accusamus, voluptatem sequi reiciendis! Nisi similique debitis, minus corporis officia sapiente id?
                 Nobis, est nisi veniam vitae nihil quo natus reiciendis optio dolorum minus beatae id voluptate eos autem accusantium officiis, voluptatibus nam amet ipsum neque dolor. Cumque aliquid aperiam beatae eveniet?
@@ -114,33 +107,29 @@
     <!-- Seccion Footer -->
     <footer>
         <div class="row">
-            <div class="cols span-1of-2">
+            <div class="col-12 col-s-12">
                 <ul class="footer-nav">
                     <li><a href="#logo">Inicio</a></li>
                     <li><a href="#section-description">Sobre mi</a></li>
                     <li><a href="#section-tecno">Tecnologías</a></li>
                     <li><a href="#section-proyectos">Proyectos</a></li>
                 </ul>
+            </div>
 
-                <div class="cols span-1of-2">
+                <div>
                     <ul class="social-links">
-                        <div>
+                        
+                        <div class="col-4 col-s-4">
                             <li href=""><img class="icono-redes" src="/image/iconos/icons8-git-144.svg" alt="Ícono de Git">
                                 <p class="desicon"><a target="_blank" href="https://icons8.com/icon/20906/git">Git</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></p></li>
 
                         </div>
-                        <div>
-                            <li href=""><img class="icono-redes" src="/image/iconos/icons8-git-144.svg" alt="Ícono de Git">
-                                <p class="desicon"><a target="_blank" href="https://icons8.com/icon/20906/git">Git</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></p></li>
-
-                        </div>
-                        <div>
+                        <div class="col-4 col-s-4">
                             <li href=""><img class="icono-redes" src="/image/iconos/icons8-git-144.svg" alt="Ícono de Git">
                                 <p class="desicon"><a target="_blank" href="https://icons8.com/icon/20906/git">Git</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></p></li>
 
                         </div>
                     </ul> 
-
             </div>
         </div>
         
