--- a/index.html
+++ b/index.html
@@ -50,11 +50,9 @@
             <!-- Git -->
             <div class="col span-1-of-3">
                 <div class="tecno-content">
-                    <div>
                         <h3>Git</h3>
                         <img class="icono-activo" src="/image/iconos/git-icon-240.svg" alt="Ícono de Git">
                         <p class="desicon"><a target="_blank" href="https://icons8.com/icon/20906/git">Git</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></p>     
-                    </div>
                 </div>
             </div>
 
@@ -107,30 +105,29 @@
     <!-- Seccion Footer -->
     <footer>
         <div class="row">
-            <div class="col-12 col-s-12">
-                <ul class="footer-nav">
-                    <li><a href="#logo">Inicio</a></li>
-                    <li><a href="#section-description">Sobre mi</a></li>
-                    <li><a href="#section-tecno">Tecnologías</a></li>
-                    <li><a href="#section-proyectos">Proyectos</a></li>
-                </ul>
-            </div>
+                <div class="barra-nav">
+                    <ul class="footer-nav">
+                        <li><a href="#logo">Inicio</a></li>
+                        <li><a href="#section-description">Sobre mi</a></li>
+                        <li><a href="#section-tecno">Tecnologías</a></li>
+                        <li><a href="#section-proyectos">Proyectos</a></li>
+                    </ul>
+                </div>
 
-                <div>
-                    <ul class="social-links">
-                        
-                        <div class="col-4 col-s-4">
-                            <li href=""><img class="icono-redes" src="/image/iconos/icons8-git-144.svg" alt="Ícono de Git">
-                                <p class="desicon"><a target="_blank" href="https://icons8.com/icon/20906/git">Git</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></p></li>
-
+                <div class="social-links">   
+                        <div class="col span-1-of-3">
+                            <div class="social-github">
+                                <h4>Github</h4>
+                                <img class="icono-redes" src="/image/iconos/github.svg" alt="Ícono de Github">
+                            </div>
                         </div>
-                        <div class="col-4 col-s-4">
-                            <li href=""><img class="icono-redes" src="/image/iconos/icons8-git-144.svg" alt="Ícono de Git">
-                                <p class="desicon"><a target="_blank" href="https://icons8.com/icon/20906/git">Git</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></p></li>
-
+                        <div class="col span-1-of-3">
+                            <div class="social-linkedin">
+                                <h4>LinkedIn</h4>
+                                <img class="icono-redes" src="/image/iconos/linkedin.svg" alt="Ícono de LinkedIn">
+                            </div>
                         </div>
-                    </ul> 
-            </div>
+                </div>
         </div>
         
     </footer>
