Por fin terminada la versión 1.0

--- a/index.html
+++ b/index.html
@@ -115,21 +115,17 @@
                 </div>
 
                 <div class="social-links">   
-                        <div class="col span-1-of-3">
                             <div class="social-github">
                                 <h4>Github</h4>
                                 <img class="icono-redes" src="/image/iconos/github.svg" alt="Ícono de Github">
-                            </div>
                         </div>
-                        <div class="col span-1-of-3">
                             <div class="social-linkedin">
                                 <h4>LinkedIn</h4>
                                 <img class="icono-redes" src="/image/iconos/linkedin.svg" alt="Ícono de LinkedIn">
-                            </div>
                         </div>
                 </div>
         </div>
-        
+        <sup>Esta página fue desarrollada durante Enero-Febrero del 2023. Todos los derechos reservados &copy</sup>        
     </footer>
 </body>
 </html>
